[package]
name = "user-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
mongodb = { version = "2.5.0", default-features = false, features = ["tokio-sync"] }
tokio = { version = "1.0", features = ["full"] }
actix-cors = "0.7.1"
bcrypt = "0.15" 
validator = { version = "0.18", features = ["derive"] }

[profile.release]
opt-level = "z"  # Size optimization
lto = true
codegen-units = 1
panic = "abort"